objects/Pop_Up_Alert__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pop-Up Alerts</relationshipLabel>
        <relationshipName>Pop_Up_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Pop-Up Alerts</relationshipLabel>
        <relationshipName>Pop_Up_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pop-Up Alerts</relationshipLabel>
        <relationshipName>Pop_Up_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>System_Maintenance_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used on modal dailog solution, modaldialog_iFrame</description>
        <inlineHelpText>Please select this for any of the system alert which will appear for all the CCPs irrespective of the account/ Contact/ Case</inlineHelpText>
        <label>System Maintenance Alert</label>
        <type>Checkbox</type>
    </fields>
    <label>Pop-Up Alert</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Case__c</columns>
        <columns>Contact__c</columns>
        <columns>End_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Pop-Up Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pop-Up Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>